# ipynb2html-pdf

./: .gitignore  README.es.md  README.md  ipynb2html.py  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ipynb2html/: __init__.py  cli.py  converter.py  gui.py
tests/: test_converter.py
